--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body {
   transform: translateX(-50%);
   width: 60px;
   height: 100px;
-  background: url('https://githubusercontent.com/Amrit-Raj01/gamexcar/main/car.png?raw=true') no-repeat center center/cover;
+  background: url('https://githubusercontent.com/Amrit-Raj01/gamexcar/main/car.png') no-repeat center center/cover;
 }
 
 .obstacle {
