--- a/style.css
+++ b/style.css
@@ -29,9 +29,10 @@ body {
   bottom: 20px;
   left: 50%;
   transform: translateX(-50%);
-  width: 60px;
-  height: 100px;
-  background: url('https://githubusercontent.com/Amrit-Raj01/gamexcar/main/car.png') no-repeat center center/cover;
+  width: 80px;
+  height: 40px;
+  background: url('https://github.com/Amrit-Raj01/gamexcar/blob/main/car.png?raw=true') no-repeat center center/cover;
+  background-size: contain;
 }
 
 .obstacle {
