--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body {
 
 .demon {
   position: absolute;
-  top: 50px;
+  bottom: 50px;
   right: -100px;
   width: 80px;
   height: 80px;
@@ -44,7 +44,7 @@ body {
 
 .coin {
   position: absolute;
-  top: 100px;
+  bottom: 100px;
   right: -50px;
   width: 40px;
   height: 40px;
