--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
   display: flex;
   justify-content: space-between;
   padding: 0 20px;
-  color: white;
+  color: blue;
   font-size: 20px;
 }
 
@@ -28,7 +28,7 @@ body {
   bottom: 20px;
   left: 50px;
   width: 80px;
-  height: 50px;
+  height: 100px;
   background-size: cover;
 }
 
